--- a/pom.xml
+++ b/pom.xml
@@ -5,60 +5,97 @@
   <version>0.0.1-SNAPSHOT</version>
   <description>This is hybrid automation framework</description>
   
-  <dependencies>
-  <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-java</artifactId>
-  </dependency>
-    <dependency>
-	    <groupId>com.relevantcodes</groupId>
-	    <artifactId>extentreports</artifactId>
-	</dependency>
-	<dependency>
-	    <groupId>org.apache.poi</groupId>
-	    <artifactId>poi</artifactId>
-	</dependency>
-	<dependency>
-	    <groupId>org.apache.poi</groupId>
-	    <artifactId>poi-ooxml</artifactId>
-	</dependency>
-  		<dependency>
-  			<groupId>org.testng</groupId>
-  			<artifactId>testng</artifactId>
-  		</dependency>
-  </dependencies>
   
+  
+  <build>
+ 
+<plugins>
+ 
+<plugin>
+ 
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-compiler-plugin</artifactId>
+<version>3.0</version>
+<configuration>
+<compilerVersion>1.8</compilerVersion>
+<source>1.6</source>
+<target>1.6</target>
+</configuration>
+</plugin>
+ 
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-surefire-plugin</artifactId>
+<version>2.17</version>
+<configuration>
+ 
+<suiteXmlFiles>
+<suiteXmlFile>sanity.xml</suiteXmlFile>
+</suiteXmlFiles>
+ 
+</configuration>
+</plugin>
+ 
+</plugins>
+ 
+</build>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.relevantcodes</groupId>
+  		<artifactId>extentreports</artifactId>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.seleniumhq.selenium</groupId>
+  		<artifactId>selenium-java</artifactId>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.poi</groupId>
+  		<artifactId>poi</artifactId>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.poi</groupId>
+  		<artifactId>poi-ooxml</artifactId>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.testng</groupId>
+  		<artifactId>testng</artifactId>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.commons</groupId>
+  		<artifactId>commons-io</artifactId>
+  	</dependency>
+  </dependencies>
   <dependencyManagement>
   	<dependencies>
   		<dependency>
   			<groupId>com.relevantcodes</groupId>
   			<artifactId>extentreports</artifactId>
-  			<version>2.41.1</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.apache.poi</groupId>
-  			<artifactId>poi</artifactId>
-  			<version>3.15</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.apache.poi</groupId>
-  			<artifactId>poi-ooxml</artifactId>
-  			<version>3.15</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.testng</groupId>
-  			<artifactId>testng</artifactId>
-  			<version>6.8</version>
+  			<version>2.40.2</version>
   		</dependency>
   		<dependency>
   			<groupId>org.seleniumhq.selenium</groupId>
   			<artifactId>selenium-java</artifactId>
-  			<version>2.53.1</version>
+  			<version>3.0.0</version>
   		</dependency>
   		<dependency>
-  			<groupId>mysql</groupId>
-  			<artifactId>mysql-connector-java</artifactId>
-  			<version>5.1.38</version>
+  			<groupId>org.apache.poi</groupId>
+  			<artifactId>poi</artifactId>
+  			<version>3.14</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>org.apache.poi</groupId>
+  			<artifactId>poi-ooxml</artifactId>
+  			<version>3.14</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>org.testng</groupId>
+  			<artifactId>testng</artifactId>
+  			<version>6.8.8</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>org.apache.commons</groupId>
+  			<artifactId>commons-io</artifactId>
+  			<version>1.3.2</version>
   		</dependency>
   	</dependencies>
   </dependencyManagement>
